# dooker-bookstore

./: Dockerfile  Makefile  db.sqlite3  docker-compose.yml  env.dev  pyproject.toml
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
