[project]
name = "bookstore"
version = "0.1.0"
description = ""
authors = [
    {name = "Yasmin Venceslau",email = "yasmin.venceslau@hotmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "django-extensions (>=3.2.3,<4.0.0)",
    "django-debug-toolbar (>=4.4.6,<5.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "gitpython (>=3.1.45,<4.0.0)",
    "whitenoise (>=6.11.0,<7.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "factory-boy (>=3.3.3,<4.0.0)"
]
